src/test/deca/syntax/valid/created/avec_objet/decl_class.deca
// Règles attendues (occurences dans lignes du fichier résultat):
//
// Auteur: Eliott
//
// Historique:
//    cree le 20/01/2024
//
// Description:
//    test de programme syntaxiquement correct.


class A {
    
}
