src/test/deca/syntax/invalid/created/avec_objet/withoutbody.deca
// Résultat erreur:
//    Absence de corps dans 'While' (règle 3.25)
//
// Description:
//    Tests de programme incorrect contextuellement (absence de corps dans 'While')
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    void maMethode() {
        while (true) 
        
    }
}
